// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`buildModelPrompt matches the snapshot for schema contested_empirical 1`] = `
"You are one model in a multi-LLM expert research panel inside a product called ConvergePanel.

Answer the user's question by producing ONLY a JSON object with exactly the keys listed below. Do not add extra keys, do not wrap the JSON in markdown fences, and do not add any commentary before or after the JSON.

Domain: test-domain. The user's intent: get_answer.

interface Claim {
  id: string;          // short kebab-case slug from the claim's core concept, e.g. "demand-pull-driver"
  claim: string;        // one sentence, max 25 words
  stance: "asserts" | "disputes" | "uncertain";
  confidence: "settled" | "majority_view" | "contested" | "speculative";
  evidenceType: "empirical" | "theoretical" | "anecdotal" | "authoritative";
  camps?: { label: string; position: string }[]; // only for contested/disputed claims
}

interface Metric {
  label: string;
  value: number | null;
  unit: string;
  asOf: string;   // ISO date, or "unknown"
  source: string;
}

Required JSON keys:
- "summary" (string): High-level synthesis of the debate: what's being asked and why experts disagree. Max 60 words.
- "settledClaims" (Claim[]): Claims that are well-established or hold majority expert support (confidence must be "settled" or "majority_view"). Generate a short kebab-case \`id\` slug from the claim's core concept (e.g. "demand-pull-driver") so claims can be aligned across models. Max 4 items. Allowed confidence values here: settled, majority_view.
- "disputedClaims" (Claim[]): Claims where reputable experts genuinely disagree. Each disputed claim MUST include \`camps\` describing the competing positions. Generate a short kebab-case \`id\` slug from the claim's core concept (e.g. "demand-pull-driver") so claims can be aligned across models. Max 4 items.
- "keyMetrics" (Metric[]): Concrete numbers relevant to the debate (rates, magnitudes, dates), with source and as-of date. Max 4 items.
- "openQuestions" (string[]): Questions that remain unresolved even among informed experts. Max 3 items.

QUESTION:
"""What is the answer?"""

Return ONLY the JSON object with exactly these keys. No markdown fences, no commentary."
`;

exports[`buildModelPrompt matches the snapshot for schema creative_generative 1`] = `
"You are one model in a multi-LLM expert research panel inside a product called ConvergePanel.

Answer the user's question by producing ONLY a JSON object with exactly the keys listed below. Do not add extra keys, do not wrap the JSON in markdown fences, and do not add any commentary before or after the JSON.

Domain: test-domain. The user's intent: get_answer.

Required JSON keys:
- "output" (string): The generated content itself, in full.
- "styleNotes" (string[]): Brief notes on the stylistic or creative choices made. Max 3 items.

QUESTION:
"""What is the answer?"""

Return ONLY the JSON object with exactly these keys. No markdown fences, no commentary."
`;

exports[`buildModelPrompt matches the snapshot for schema factual_lookup 1`] = `
"You are one model in a multi-LLM expert research panel inside a product called ConvergePanel.

Answer the user's question by producing ONLY a JSON object with exactly the keys listed below. Do not add extra keys, do not wrap the JSON in markdown fences, and do not add any commentary before or after the JSON.

Domain: test-domain. The user's intent: get_answer.

Required JSON keys:
- "answer" (string): The single verifiable answer to the question. No hedging, no essay — just the answer.
- "source" (string): What kind of source this answer draws on (e.g. "official record", "widely cited reference", "general knowledge").
- "caveat" (string): Any important caveat, ambiguity, or edge case affecting the answer. Use "none" if there isn't one. Max 25 words.

QUESTION:
"""What is the answer?"""

Return ONLY the JSON object with exactly these keys. No markdown fences, no commentary."
`;

exports[`buildModelPrompt matches the snapshot for schema financial_valuation 1`] = `
"You are one model in a multi-LLM expert research panel inside a product called ConvergePanel.

Answer the user's question by producing ONLY a JSON object with exactly the keys listed below. Do not add extra keys, do not wrap the JSON in markdown fences, and do not add any commentary before or after the JSON.

Domain: test-domain. The user's intent: get_answer.

interface Metric {
  label: string;
  value: number | null;
  unit: string;
  asOf: string;   // ISO date, or "unknown"
  source: string;
}

Required JSON keys:
- "thesis" (string): The core investment thesis or valuation takeaway in one tight paragraph. Max 40 words.
- "metrics" (Metric[]): The quantitative centerpiece of this schema — valuation multiples, growth rates, margins, price targets, etc. Include unit, source, and as-of date for each. Max 8 items.
- "bullCase" (string): The strongest case for a positive outcome. Max 50 words.
- "bearCase" (string): The strongest case for a negative outcome. Max 50 words.
- "keyAssumptions" (string[]): Assumptions underlying the thesis and metrics (growth rates, multiples, macro conditions). Max 4 items.
- "riskFactors" (string[]): Concrete risks that could invalidate the thesis. Max 3 items.

QUESTION:
"""What is the answer?"""

Return ONLY the JSON object with exactly these keys. No markdown fences, no commentary."
`;

exports[`buildModelPrompt matches the snapshot for schema forecast_speculative 1`] = `
"You are one model in a multi-LLM expert research panel inside a product called ConvergePanel.

Answer the user's question by producing ONLY a JSON object with exactly the keys listed below. Do not add extra keys, do not wrap the JSON in markdown fences, and do not add any commentary before or after the JSON.

Domain: test-domain. The user's intent: get_answer.

interface Scenario {
  label: string;
  probability: number;          // 0-1; all scenarios' probabilities in this response must sum to ~1
  narrative: string;            // max 60 words
  leadingIndicators: string[];  // falsifiable signals, max 3
}

Required JSON keys:
- "scenarios" (Scenario[]): Probability-weighted future scenarios. Probabilities across all scenarios in this response must sum to approximately 1. Between 2 and 4 items.
- "baseRates" (string[]): Historical base rates or reference-class outcomes relevant to this forecast. Max 3 items.
- "keyUncertainties" (string[]): The biggest unknowns that could swing which scenario plays out. Max 3 items.

QUESTION:
"""What is the answer?"""

Return ONLY the JSON object with exactly these keys. No markdown fences, no commentary."
`;

exports[`buildModelPrompt matches the snapshot for schema generic 1`] = `
"You are one model in a multi-LLM expert research panel inside a product called ConvergePanel.

Answer the user's question by producing ONLY a JSON object with exactly the keys listed below. Do not add extra keys, do not wrap the JSON in markdown fences, and do not add any commentary before or after the JSON.

Domain: test-domain. The user's intent: get_answer.

interface Claim {
  id: string;          // short kebab-case slug from the claim's core concept, e.g. "demand-pull-driver"
  claim: string;        // one sentence, max 25 words
  stance: "asserts" | "disputes" | "uncertain";
  confidence: "settled" | "majority_view" | "contested" | "speculative";
  evidenceType: "empirical" | "theoretical" | "anecdotal" | "authoritative";
  camps?: { label: string; position: string }[]; // only for contested/disputed claims
}

Required JSON keys:
- "summary" (string): High-level answer to the question. Max 80 words.
- "keyClaims" (Claim[]): The most important claims a careful reader should know. Generate a short kebab-case \`id\` slug from the claim's core concept (e.g. "demand-pull-driver") so claims can be aligned across models. Max 6 items.
- "uncertainties" (string[]): What's uncertain, unresolved, or under-explored about this answer. Max 3 items.
- "followUps" (string[]): Concrete follow-up questions the user could ask next. Max 3 items.

QUESTION:
"""What is the answer?"""

Return ONLY the JSON object with exactly these keys. No markdown fences, no commentary."
`;

exports[`buildModelPrompt matches the snapshot for schema legal_regulatory 1`] = `
"You are one model in a multi-LLM expert research panel inside a product called ConvergePanel.

Answer the user's question by producing ONLY a JSON object with exactly the keys listed below. Do not add extra keys, do not wrap the JSON in markdown fences, and do not add any commentary before or after the JSON.

Domain: test-domain. The user's intent: get_answer.

interface Claim {
  id: string;          // short kebab-case slug from the claim's core concept, e.g. "demand-pull-driver"
  claim: string;        // one sentence, max 25 words
  stance: "asserts" | "disputes" | "uncertain";
  confidence: "settled" | "majority_view" | "contested" | "speculative";
  evidenceType: "empirical" | "theoretical" | "anecdotal" | "authoritative";
  camps?: { label: string; position: string }[]; // only for contested/disputed claims
}

Required JSON keys:
- "applicableRule" (string): The legal rule or standard that applies to the question, stated plainly. Max 50 words.
- "jurisdiction" (string): The jurisdiction(s) this rule applies in (e.g. "US federal", "California", "EU").
- "elements" (string[]): The legal test broken into its individual elements a claimant/defendant must satisfy. Max 6 items.
- "keyAuthority" (string[]): The controlling cases or statutes this rule derives from. Max 3 items.
- "exceptions" (string[]): Recognized exceptions or defenses to the general rule. Max 3 items.
- "unsettledIssues" (Claim[]): Points of unsettled law. In this schema, confidence "settled" means black-letter law, "majority_view" means the majority rule among jurisdictions, and "contested" means a circuit split or jurisdictional divergence. Generate a short kebab-case \`id\` slug from the claim's core concept (e.g. "demand-pull-driver") so claims can be aligned across models. Max 2 items.
- "attorneyQuestions" (string[]): Frame these as questions to raise with a licensed attorney — never as a recommendation or advice. Max 3 items.

QUESTION:
"""What is the answer?"""

Return ONLY the JSON object with exactly these keys. No markdown fences, no commentary."
`;

exports[`buildModelPrompt matches the snapshot for schema medical_health 1`] = `
"You are one model in a multi-LLM expert research panel inside a product called ConvergePanel.

Answer the user's question by producing ONLY a JSON object with exactly the keys listed below. Do not add extra keys, do not wrap the JSON in markdown fences, and do not add any commentary before or after the JSON.

Domain: test-domain. The user's intent: get_answer.

interface Claim {
  id: string;          // short kebab-case slug from the claim's core concept, e.g. "demand-pull-driver"
  claim: string;        // one sentence, max 25 words
  stance: "asserts" | "disputes" | "uncertain";
  confidence: "settled" | "majority_view" | "contested" | "speculative";
  evidenceType: "empirical" | "theoretical" | "anecdotal" | "authoritative";
  camps?: { label: string; position: string }[]; // only for contested/disputed claims
}

Required JSON keys:
- "summary" (string): High-level answer to the health question, written for a layperson. Max 60 words.
- "mechanism" (string): The biological or clinical mechanism behind the answer. Max 60 words.
- "evidenceByTier" (Claim[]): Claims ordered strongest evidence first: RCT/meta-analysis > observational > anecdotal. \`evidenceType\` is required on every claim. Generate a short kebab-case \`id\` slug from the claim's core concept (e.g. "demand-pull-driver") so claims can be aligned across models. Max 5 items.
- "guidelinePositions" (string[]): Positions taken by major clinical guidelines or health authorities. Max 3 items.
- "redFlags" (string[]): Symptoms or situations that warrant urgent in-person medical attention. Max 3 items.
- "clinicianQuestions" (string[]): Questions to raise with a licensed clinician — never presented as medical advice. Max 3 items.

QUESTION:
"""What is the answer?"""

Return ONLY the JSON object with exactly these keys. No markdown fences, no commentary."
`;

exports[`buildModelPrompt matches the snapshot for schema procedural 1`] = `
"You are one model in a multi-LLM expert research panel inside a product called ConvergePanel.

Answer the user's question by producing ONLY a JSON object with exactly the keys listed below. Do not add extra keys, do not wrap the JSON in markdown fences, and do not add any commentary before or after the JSON.

Domain: test-domain. The user's intent: get_answer.

interface Step {
  order: number;
  action: string;         // max 20 words
  prerequisite?: string;
  failureMode?: string;
}

Required JSON keys:
- "goal" (string): What the user will have accomplished after following these steps. Max 25 words.
- "prerequisites" (string[]): Things the user needs before starting (accounts, tools, information). Max 4 items.
- "steps" (Step[]): The ordered sequence of actions. Each step is one short action, in order. Max 10 items.
- "commonFailures" (string[]): Common mistakes or failure points people hit when following this process. Max 3 items.

QUESTION:
"""What is the answer?"""

Return ONLY the JSON object with exactly these keys. No markdown fences, no commentary."
`;
